# ChatBot-RAG

./: .gitignore  README.md  pyproject.toml
src/chatbot/: app.py
src/chatbot/config/: __init__.py  models.py  settings.py
src/chatbot/core/: __init__.py  chat_memory.py  chatbot.py  data_ingestion.py  embeddings.py  prompts.py  rag.py  retriever.py  select_model.py  vector_db.py
src/chatbot/utils/: logger.py
src/chatbot/vectordb/chroma_db/: chroma.sqlite3
