[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Samarth-Prajapati",email = "samarthp475@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "langsmith (>=0.6.4,<0.7.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-groq (>=1.1.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "chatbot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
